items now reflect its contents.
[2868278] Minimize via the system menu, SystemTray menu and system control
box button now locks the database if the preference 'Lock on Minimize' is
set.
[2868244] Change font dialogs now work again.
[] Now no longer complains about WTS service in Windows systems earlier
than Windows XP.
[] Filters containing tests on the entry type now exported to XML
correctly.

New Features for 3.19.1
=======================
[2881604] Allow edit of base entry of a shortcut via the Edit menu and/or
by right-clicking on a shortcut entry.
[2872273] Improve Import Text 'Line skipped' message.
[] Add highlighting of added/changed and deleted records.  The latter can
only be viewed via a filter or the supplied menu item (under View menu).

Changes to Existing Features in 3.19.1
======================================
[2880663] 'Browse to' special fields (currently: [alt], {alt}, [ssh], [autotype]
and [xa]) are removed from the URL field when copied to the clipboard or when
used in the RunCommand (via $url).  If the '[alt]' or {alt} were present, then
the RunCommand will execute this program.
[2868278] The SystemTray Unlock menu item now, if the correct passphrase is
given, only unlocks the databse. To show the application, use the Restore
menu item.
[2874520] To prevent junk showing in the Notes field in List View due to end
of line characters, now only show the first line but indicate more are there using
[>>>] at end of line. Setting preference "Show Notes as Tooltips in Tree & List
View" will show these (up to 250 characters).

Bugs fixed in 3.19
==================
[2865116] Status-Bar message now correctly states "Password Copied"
when doing a "Run Command".
[2865116] Status-Bar message now updated when using the keyboard arrows
to transverse entries in Tree and List views.
[2856750] The Password Policy now correctly displayed in List View,
when selected.
[2856051] Changes to database preferences are no longer lost upon minimize.